--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mariadb://93.30.214.50:33070/Lacuillere
 spring.datasource.username=Groupe
 spring.datasource.password=onaimebienmangerdansceGroupe
