security : add Jasypt to protect and encrypt public password in application.properties

--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,11 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.github.ulisesbocchio</groupId>
+            <artifactId>jasypt-spring-boot-starter</artifactId>
+            <version>LATEST</version>
+        </dependency>
     </dependencies>
 
     <build>
