--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mariadb://93.30.214.50:33070/Lacuillere
 spring.datasource.username=Groupe
-spring.datasource.password=onaimebienmangerdansceGroupe
+spring.datasource.password=ENC(UzhzDet5b7w0eJqYWFISlDbjfOPhj18BGkc8dEzNzww=)
 
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.hibernate.ddl-auto=create
